src/objects/Approved_Sub__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for the vendor or sub account.  If not found, use the Global Business Services app to request the creation of a new account record.</inlineHelpText>
        <label>Subcontractor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Approved or Preferred Subs/Vendors</relationshipLabel>
        <relationshipName>Approved_Subs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipName>Approved_Subs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Provide any general notes or comments about the  sub or vendor that would be beneficial to the task order project teams or general management of the MSA agreement.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <inlineHelpText>Provide the name of the primary contact for the vendor/sub.</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Provide the primary contact&apos;s email address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Provide the primary contact&apos;s phone number.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Define the primary contact&apos;s role with the vendor/sub as it relates to the MSA</inlineHelpText>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Approved or Preferred Subs/Vendors</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Approved Sub Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved or Preferred Subs/Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>